sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: not found: value getNombreValuers
	var taille = getNombreValuers();
                     ^